--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,10 +11,29 @@
     <title>Bloc Cafe </title>
 </head>
 <body>
-<<<<<<< HEAD
-    <header></header>
-=======
->>>>>>> master
-    
+    <header class="header">
+        <div class="header__texto">
+            <div class="contenedor">
+                <div class="barra">
+                    <a href="index.html" class="logo">
+                        <h1 class="logo__nombre">Blog <span class="logo__bold">DeCafe</span></h1>
+                    </a>
+
+                    <nav class="navegacion">
+                        <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                        <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+                        <a href="contato.html" class="navegacion__enlace">Contacto</a>
+                    </nav>
+                </div>
+            </div>
+            <h2 class="no-margin">
+                Blog de cafe con consejos y cursos
+            </h2>
+            <p class="no-margin">
+                Aprende de los expertos con las mejores recetas y consejo
+            </p>
+        </div> 
+    </header>
+
 </body>
 </html>
