--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,7 +22,7 @@
                 <nav class="navegacion">
                     <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
                     <a href="cursos.html" class="navegacion__enlace">Cursos</a>
-                    <a href="contato.html" class="navegacion__enlace">Contacto</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
                 </nav>
     
             </div>
